--- a/index.html
+++ b/index.html
@@ -43,13 +43,19 @@
         opacity: 1;
         right: 0;
       }
+
+      .align-center {
+        text-align: center;
+      }
     </style>
   </head>
   <body>
-    <h1>Discord Recording Bot</h1>
-    <button id="btnRecord" class="button" style="vertical-align: middle">
-      <span id="buttonText">Start Recording</span>
-    </button>
+    <div class="align-center">
+      <h1>Discord Recording Bot</h1>
+      <button id="btnRecord" class="button" style="vertical-align: middle">
+        <span id="buttonText">Start Recording</span>
+      </button>
+    </div>
   </body>
 </html>
 
