--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
         right: -20px;
         transition: 0.5s;
       }
-
       .rec-button:hover span {
         padding-right: 25px;
       }
-
       .rec-button:hover span:after {
         opacity: 1;
         right: 0;
@@ -24,7 +22,7 @@
       .button {
         display: inline-block;
         border-radius: 4px;
-        background-color: #56f056;
+        background-color: #45b645;
         border: none;
         color: #ffffff;
         text-align: center;
@@ -34,16 +32,12 @@
         transition: all 0.5s;
         cursor: pointer;
       }
-
       .button span {
         cursor: pointer;
         display: inline-block;
         position: relative;
         transition: 0.5s;
       }
-
-
-
       .rec-container {
         margin-top: 4.5rem;
         padding: 10px;
@@ -195,7 +189,7 @@
     
 
     document.querySelector("#buttonText").textContent = "Start Recording";
-    document.getElementById("btnRecord").style.backgroundColor = "#56f056";
+    document.getElementById("btnRecord").style.backgroundColor = "#45b645";
     document.getElementById("fileName").style.display = "block";
   }
 
